
// demo_srv/demo_task/proto/demo_task.proto
syntax = "proto3";

package DEMO_SRV;

service DemoService {
  rpc FindOne (DemoTaskById) returns (DemoTask) {}
  rpc CreateOne (DemoTaskCreate) returns (DemoTaskById) {}
  rpc UpdateOne (DemoTaskUpdate) returns (DemoTaskUpdateStatus) {}
  rpc ChangeStatus (DemoTaskChangeStatus) returns (DemoTaskUpdateStatus) {}
  rpc DeleteOne (DemoTaskById) returns (DemoTaskUpdateStatus) {}
}

message DemoTaskById {
  string id = 1;
}

message DemoTask {
  string id = 1;
  string name = 2;
  string email = 3;
  bool status = 4;
  string locId = 5;
  string orgId = 6;
}

message DemoTaskCreate {
  string name = 1;
  string email = 2;
}

message DemoTaskUpdate {
  string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional bool status = 4;
}

message DemoTaskChangeStatus {
  string id = 1;
  bool status = 2;
}

message DemoTaskUpdateStatus {
  bool status = 1;
}
